--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,13 @@
 
 /* Common Styles */
 body {
-    background-color: white;
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    flex-direction: column;
     margin: 0 auto;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Cover Styles */
@@ -172,6 +173,62 @@ body {
     height: 26px;
 }
 
+/*--------------------------------------
+        UpMatch Webpage Styles
+------------------------------------------*/
+
+.match-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+}
+
+.thumbnail-match {
+    width: 270px;
+    height: 245px;
+    border: 1px solid #E8E8E8;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.thumbnail-match img {
+    width: 93.04px;
+    height: 56.18px;
+}
+
+.vsflag {
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.match-section h4 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 30px;
+}
+
+.match-section h2 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.match-info {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #4D4D4D;
+}
+
 /* ----------------
     footer style 
 --------------------------*/
@@ -182,11 +239,12 @@ footer {
     height: 350px;
     background: #161616;
     text-align: center;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
 .footer-title {
-    margin-top: 70px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
@@ -237,25 +295,17 @@ footer hr {
 
 @media only screen and (min-width=688px) and (max-width=992px) {
 
-    /* body {
-        background-color: white;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        margin: 0 auto;
-    }
-
     .cover-container {
         margin-top: 50px;
-        width: 350px;
+        width: 600px;
         background: #161616;
         border-radius: 30px;
         display: flex;
         align-items: center;
-        padding: 58px 50px 0px;
+        /* padding: 58px 50px 0px; */
     }
 
-    .cover-container h1 {
+    /* .cover-container h1 {
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
@@ -288,6 +338,6 @@ footer hr {
         font-size: 14px;
         line-height: 26px;
         color: #FFFFFF;
-    } */
+    }  */
 
 }
