--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
+
 /* Common Styles */
 body {
+    font-family: 'Poppins';
+    font-style: normal;
     margin: 0 auto;
 }
 
@@ -53,8 +56,6 @@ main {
     height: 56px;
     background: #DD0000;
     border-radius: 5px;
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 23px;
@@ -74,7 +75,9 @@ main {
     margin-left: 30px;
 }
 
-/* Blog style */
+/*------------------------------
+         Blog style
+---------------------------------*/
 .blog-container {
     margin-top: 100px;
     margin-bottom: 130px;
@@ -107,8 +110,6 @@ main {
     height: 50px;
     background: #FFFFFF;
     border-radius: 10px;
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 30px;
@@ -150,8 +151,6 @@ main {
     border: 1px solid #161616;
     border-radius: 5px;
     text-decoration: none;
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
@@ -162,8 +161,6 @@ main {
 }
 
 .transfer-section h1 {
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 600;
     font-size: 18px;
     line-height: 27px;
@@ -208,24 +205,18 @@ main {
 }
 
 .match-section h4 {
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 600;
     font-size: 16px;
     line-height: 30px;
 }
 
 .match-section h2 {
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 600;
     font-size: 20px;
     line-height: 30px;
 }
 
 .match-info {
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
@@ -239,7 +230,6 @@ main {
 footer {
     position: relative;
     width: 100%;
-    height: 350px;
     background: #161616;
     text-align: center;
     display: flex;
@@ -248,8 +238,6 @@ footer {
 }
 
 .footer-title {
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 600;
     font-size: 30px;
     line-height: 60px;
@@ -271,8 +259,6 @@ footer hr {
 
 .footer-menu-name {
     text-decoration: none;
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
@@ -286,6 +272,7 @@ footer hr {
     display: flex;
     justify-content: center;
     gap: 50px;
+    margin-bottom: 50px;
 }
 
 /*-------------------------------
@@ -350,19 +337,16 @@ footer hr {
 @media only screen and (max-width: 688px) {
 
     .cover-container {
-        width: 90%;
+        width: 500px;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
 
     .cover-title-info {
         margin: auto;
-        display: grid;
         display: flex;
         flex-direction: column;
-        /* justify-content: center; */
+        text-align: center;
         align-items: center;
     }
 
@@ -384,4 +368,44 @@ footer hr {
         font-size: 20px;
         line-height: 23px;
     }
+
+    .cover-container img {
+        width: 80%;
+        margin-top: 20px;
+
+    }
+
+    /*------------------------------
+             Blog style
+    ---------------------------------*/
+    .blogs {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu-container {
+        background-color: white;
+    }
+
+    .menu-btn {
+        border: 1px solid gray;
+    }
+
+    .transfer-section {
+        grid-template-columns: repeat(1, 1fr);
+        grid-column-gap: 16px;
+    }
+
+    /* ----------------
+        footer style 
+    --------------------------*/
+    .footer-menu {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
 }
