Mobile Responsive Done

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,10 +17,11 @@ main {
 /* Cover Styles */
 .cover-container {
     margin-top: 50px;
-    width: 1050px;
+    width: 78%;
     background: #161616;
     border-radius: 30px;
     display: flex;
+    justify-content: center;
     align-items: center;
     padding: 33px 50px 0px;
 }
@@ -73,6 +74,7 @@ main {
     /* width: 581px;
     height: 613px; */
     margin-left: 30px;
+    margin-bottom: -7px;
 }
 
 /*------------------------------
@@ -228,7 +230,6 @@ main {
 --------------------------*/
 
 footer {
-    position: relative;
     width: 100%;
     background: #161616;
     text-align: center;
@@ -261,7 +262,7 @@ footer hr {
     text-decoration: none;
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
+    /* line-height: 24px; */
     color: #B9B9B9;
 }
 
@@ -283,71 +284,35 @@ footer hr {
     Tablet-Section
  --------------*/
 
-@media only screen and (min-width=688px) and (max-width=992px) {
+@media only screen and (min-width: 689px) and (max-width: 992px) {
 
-    /* .cover-container {
-        margin-top: 50px;
-        width: 500px;
-        background: red;
-        border-radius: 30px;
-        display: flex;
-        align-items: center;
+    .cover-container {
+        background-color: red;
     }
-
-    .cover-container h1 {
-        font-family: 'Poppins';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 25px;
-        line-height: 5px;
-        color: #FFFFFF;
-    }
-
-    .cover-container a {
-        text-decoration: none;
-        color: #FFFFFF;
-        width: 161px;
-        height: 48px;
-        background: #DD0000;
-        border-radius: 5px;
-        font-family: 'Poppins';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 23px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .cover-container p {
-        font-family: 'Poppins';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 26px;
-        color: #FFFFFF;
-    } */
-
-    /* footer {
-        width: 100%;
-    } */
 }
 
 @media only screen and (max-width: 688px) {
 
+    /*------------------------------
+                     Cover style
+            ---------------------------------*/
+
     .cover-container {
-        width: 500px;
+        margin-top: 20px;
+        width: 50%;
         display: flex;
         flex-direction: column;
+        justify-content: center;
     }
 
     .cover-title-info {
-        margin: auto;
         display: flex;
         flex-direction: column;
         text-align: center;
+        justify-content: center;
         align-items: center;
+        width: 90%;
+        margin-left: 0px;
     }
 
     .cover-container h1 {
@@ -364,14 +329,11 @@ footer hr {
     .cover-container a {
         width: 161px;
         height: 40px;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 23px;
     }
 
     .cover-container img {
-        width: 80%;
-        margin-top: 20px;
+        width: 100%;
+        margin-top: 50px;
 
     }
 
@@ -401,11 +363,20 @@ footer hr {
         footer style 
     --------------------------*/
     .footer-menu {
-        margin-top: 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        margin-top: 20px;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
         gap: 20px;
+    }
+
+    .footer-menu-name {
+        font-weight: 400;
+        font-size: 14px;
+    }
+
+    .social-icon {
+        gap: 30px;
     }
 
 }
